--- a/kababi.html
+++ b/kababi.html
@@ -3,34 +3,252 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Kababi</title>
 </head>
 
-<header>
-    <img src="./img/logo/logo@2x.png" alt="Kababi logo"/>
+<!--------------BEST QUALITY FOODS------------------->
 
-    <ul class="header">
-        <li class="home">Home</li>
-        <li class="about">About</li>
-        <li class="page">Page</li>
-        <li class="shop">Shop</li>
-        <li class="contact">Contact</li>    
-    </ul>
-    <div class="phone-number">
-    <img src="./img/Other/phone.png" alt="phone picture"/>
-    </div>
-    <form>
-    <input type="button" value="Book a table"/>  
-    </form>
-
-
-
-
-
-
-</header>
 <body>
+<header>
+
+    <section class="logo">
+    <img src="./img/logo/logo@2x.png" alt="logo kababi"/>
+    </section>
+
+    <nav class="barre-nav">
+        <ul class="menuderoulant">
+            <li class="home-nav-item">
+                <a href="#">Home</a>
+                <ul class="sub">
+                    <li> <a href="#">1</a></li>
+                    <li> <a href="#">2</a></li>
+                    <li> <a href="#">3</a></li>
+                </ul>
+            </li>
+
+            <li class ="about">
+                <a href ="">About</a>
+            </li>
+
+             <li class="page-nav-item">
+                <a href="#">Page</a>
+                <ul class="sub">
+                    <li> <a href="#">1</a></li>
+                    <li> <a href="#">2</a></li>
+                    <li> <a href="#">3</a></li>
+                </ul>
+             </li>
+
+                 <li class="shop-nav-item">
+                <a href="#">Shop</a>
+                <ul class="sub">
+                    <li> <a href="#">1</a></li>
+                    <li> <a href="#">2</a></li>
+                    <li> <a href="#">3</a></li>
+                </ul>
+                 </li>
+
+                <li class ="contact">
+                <a href ="">Contact</a>
+            </li>
+        </ul>
+    </nav>
     
+
+ <section class="phone">
+    <img src="./img/Other/phone.png" class="phone-image" alt="phone picture"/>
+    <p>>+012(345)6789</p>
+ </section>
+ 
+ <section class="book">
+    <button> Book a table <img src="./img/Other/arrow.png" alt="arrow"></button>
+ </section>
+
+<section class="best-quality">
+    <img src="./img/slider/img_bg2.png" class="img-best" alt="best-quality"/>
+    <h1>Best<br> quality<br> foods</h1>
+    <button> Explore our menu <img src="./img/Other/arrow.png" alt="arrow"/></button>
+</section> 
+</header>
+
+<!--------------CHOOSE YOUR BEST CATEGORY------------------->
+
+<div class="categories">
+    <section class="choose-category">
+        <h2>Choose your best category</h2>
+        <p class="subtitle">Best foods for you & family</p>
+    </section>
+
+    <section class="category">
+        <div class="cheeseburger">
+            <img src="./img/icons/001-cheeseburger.png" class="burger" alt="Cheeseburger"/>
+            <h4>Cheeseburger</h4>
+            <img src="./img/Other/arrow.png" alt="arrow"/>
+        </div>
+    </section>
+
+     <section class="category">
+        <div class="pizza">
+            <img src="./img/icons/002-pizza.png" class="pizza-slice" alt="Pizza Slice"/>
+            <h4>Pizza Slice</h4>
+            <img src="./img/Other/arrow.png" alt="arrow"/>
+        </div>
+    </section>
+
+     <section class="category">
+        <div class="coffee">
+            <img src="./img/icons/003-coffee.png" class="coffee-cup" alt="Coffee Cup"/>
+            <h4>Coffee-Cup</h4>
+            <img src="./img/Other/arrow.png" alt="arrow"/>
+        </div>
+    </section>
+
+     <section class="category">
+        <div class="chicken">
+            <img src="./img/icons/004-chicken-leg.png" class="chicken-leg" alt="Chicken Leg"/>
+            <h4>Chicken-Leg</h4>
+            <img src="./img/Other/arrow.png" alt="arrow"/>
+        </div>
+    </section>
+
+     <section class="category">
+        <div class="energy">
+            <img src="./img/icons/005-cocktail.png" class="energy-drink" alt="Energy Drink"/>
+            <h4>Energy Drink</h4>
+            <img src="./img/Other/arrow.png" alt="arrow"/>
+        </div>
+    </section>
+
+     <section class="category">
+        <div class="shrimp1">
+            <img src="./img/icons/006-marin.png" class="shrimp" alt="Shrimp"/>
+            <h4>Shrimp</h4>
+            <img src="./img/Other/arrow.png" alt="arrow"/>
+        </div>
+    </section>
+
+<aside>
+    <img src="./img/gallery/imgfood1.png" alt="Plat 1"/>
+    <img src="./img/gallery/imgfood2.jpg" alt="Plat 2"/>
+    <img src="./img/gallery/imgfood3.png" alt="Plat 3"/>
+</aside>
+</div>
+
+<!--------------WHY CHOOSE US------------------->
+
+<section class="choose">
+    <h2>Why choose us</h2>
+    <p class="subtitle">Best foods for you & family</p>
+    <div class="choose">
+        <img src="./img/about-us/img_aboutus_home1.jpg" alt="aboutus" />
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Explicabo, unde aspernatur porro voluptates 
+            eum quia reiciendis fugiat vero dignissimos nihil
+             vitae sed quae voluptatibus blanditiis nemo 
+             tempora tenetur veniam soluta numquam iure impedit eaque.
+        </p>
+        <button>Discover more<img src="./img/Other/arrow.png" alt="arrow"/></button>
+    </div>
+</section>
+
+<!--------------TRY OUR SPECIAL OFFER (MENU)------------------->
+
+<section class="special">
+    <h2>Try our special offers</h2>
+    <p class="subtitle">Best foods for you & family</p>
+    <img src="./img/our-menu/img2bg-our-menu.jpg"/>
+    <img src="./img/our-menu/imgbg-our-menu.jpg"/>
+
+    <div class="special-menu">
+        <h4>Raw scallops From Erquy</h4>
+        <p>Candied Jerusalem artichokes, truffle</p>
+    </div>
+    <div class="special-menu">
+        <h4>Celeriac and Truffle Ravioli</h4>
+        <p>Roasted langoustine, consommé</p>
+    </div>
+    <div class="special-menu">
+        <h4>Cod Filet Cooked on One Side</h4>
+        <p>Chorizo, chickpea espuma, pequillos</p>
+    </div>
+    <div class="special-menu">
+        <h4>Sea Bass Ceviche</h4>
+        <p>Avocado, butternut, lime</p>
+    </div>
+    <div class="special-menu">
+        <h4>Corrèze Pan-seared Veal Liver</h4>
+        <p>Olive oil mashed patato, onion jus</p>
+    </div>
+    <div class="special-menu">
+        <h4>Grilled Veal Filet Mignon</h4>
+        <p>Pumpkin, endives with hazelnuts</p>
+    </div>
+    <div class="special-menu">
+        <h4>Tender Octopus and Fennel</h4>
+        <p>Citrus, wild rocket condiment</p>
+    </div>
+    <div class="special-menu">
+        <h4>Viennese Veal Cullet</h4>
+        <p>Ricotta and spinach gnocchhi, Caccio de Pepe</p>
+    </div>
+</section>
+
+<!--------------RESTAURANT PHOTO GALLERY------------------->
+
+<section class="gallery">
+    <h2>Restaurants photo gallery</h2>
+    <p class="subtitle">Best foods for you & family</p>
+
+    <div class="gallery-photo">
+        <img src="./img/gallery/img1gallerybox.jpg"/>
+    </div>
+    <div class="gallery-photo">
+        <img src="./img/gallery/img2gallerybox.jpg"/>
+    </div>
+    <div class="gallery-photo">
+        <img src="./img/gallery/img3gallerybox.jpg"/>
+    </div>
+    <div class="gallery-photo">
+        <img src="./img/gallery/img4gallerybox.jpg"/>
+    </div>
+    <div class="gallery-photo">
+        <img src="./img/gallery/img5gallerybox.jpg"/>
+    </div>
+    <div class="gallery-photo">
+        <img src="./img/gallery/img6gallerybox.jpg"/>
+    </div>
+     <button>View more photos<img src="./img/Other/arrow.png" alt="arrow"/></button>
+</section>
+
+<!--------------MEET PROFESSIONAL CHEFS------------------->
+
+<section class="chef">
+<h2>Meet professional chefs</h2>
+<p class="subtitle">Bests foods for you & family</p>
+<img src="./img/team/img1team.jpg" alt="chef 1">
+<img src="./img/team/img2team.jpg" alt="chef 2">
+<img src="./img/team/img3team.jpg" alt="chef 3">
+<img src="./img/team/img4team.jpg" alt="chef 4">
+</section>
+
+<!--------------LASTEST NEWS & BLOG------------------->
+
+<section class="news">
+    <h2>Latest news & blog</h2>
+    <p class="subtitle">Best foods for you & family</p>
+
+
+
+
+</section>
+
+
+
+
+
+
 
 
 
@@ -40,4 +258,6 @@
 
 
 </body>
+
+
 </html>
