--- a/kababi.html
+++ b/kababi.html
@@ -239,6 +239,14 @@
     <h2>Latest news & blog</h2>
     <p class="subtitle">Best foods for you & family</p>
 
+    <div class="containers-news">
+        
+        <div class="news1">
+            <img src="./img/blog/img3blohhome01.jpg" alt="blohhome01">
+
+        </div>
+    </div>
+
 
 
 
