--- a/kababi.html
+++ b/kababi.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="variables.css" /> 
+    <link rel="stylesheet" href="style.css" /> 
     <link rel="stylesheet" href="bis-ver.css" />
     <title>Kababi</title>
   </head>
@@ -185,9 +186,9 @@
         </section>
 
         <aside>
-          <img src="./img/gallery/imgfood1.png" alt="Plat 1" />
-          <img src="./img/gallery/imgfood2.jpg" alt="Plat 2" />
-          <img src="./img/gallery/imgfood3.png" alt="Plat 3" />
+          <img src="./img/gallery/imgfood1.png" class="imgfood1" alt="Plat 1" />
+          <img src="./img/gallery/imgfood2.jpg" class="imgfood2"  alt="Plat 2" />
+          <img src="./img/gallery/imgfood3.png" class="imgfoot3" alt="Plat 3" />
         </aside>
       </div>
 
@@ -281,16 +282,17 @@
         </button>
       </section>
 
-      <!--------------MEET PROFESSIONAL CHEFS------------------->
+<!--------------MEET PROFESSIONAL CHEFS------------------->
 
-      <section class="chef">
-        <h2>Meet professional chefs</h2>
-        <p class="subtitle">Bests foods for you & family</p>
-        <img src="./img/team/img1team.jpg" alt="chef 1" />
-        <img src="./img/team/img2team.jpg" alt="chef 2" />
-        <img src="./img/team/img3team.jpg" alt="chef 3" />
-        <img src="./img/team/img4team.jpg" alt="chef 4" />
-      </section>
+<section class="chef">
+<h2>Meet professional chefs</h2>
+<p class="subtitle">Bests foods for you & family</p>
+<img src="./img/team/img1team.jpg" alt="chef 1">
+<img src="./img/team/img2team.jpg" alt="chef 2">
+<img src="./img/team/img3team.jpg" alt="chef 3">
+<img src="./img/team/img4team.jpg" alt="chef 4">
+</section>
+
 
       <!--------------LASTEST NEWS & BLOG------------------->
 
@@ -367,105 +369,6 @@
         </p>
         <button>Discover more<img src="./img/Other/arrow.png" alt="arrow"/></button>
     </div>
-</section>
-
-<!--------------TRY OUR SPECIAL OFFER (MENU)------------------->
-
-<section class="special">
-    <h2>Try our special offers</h2>
-    <p class="subtitle">Best foods for you & family</p>
-    <img src="./img/our-menu/img2bg-our-menu.jpg"/>
-    <img src="./img/our-menu/imgbg-our-menu.jpg"/>
-
-    <div class="special-menu">
-        <h4>Raw scallops From Erquy</h4>
-        <p>Candied Jerusalem artichokes, truffle</p>
-    </div>
-    <div class="special-menu">
-        <h4>Celeriac and Truffle Ravioli</h4>
-        <p>Roasted langoustine, consommé</p>
-    </div>
-    <div class="special-menu">
-        <h4>Cod Filet Cooked on One Side</h4>
-        <p>Chorizo, chickpea espuma, pequillos</p>
-    </div>
-    <div class="special-menu">
-        <h4>Sea Bass Ceviche</h4>
-        <p>Avocado, butternut, lime</p>
-    </div>
-    <div class="special-menu">
-        <h4>Corrèze Pan-seared Veal Liver</h4>
-        <p>Olive oil mashed patato, onion jus</p>
-    </div>
-    <div class="special-menu">
-        <h4>Grilled Veal Filet Mignon</h4>
-        <p>Pumpkin, endives with hazelnuts</p>
-    </div>
-    <div class="special-menu">
-        <h4>Tender Octopus and Fennel</h4>
-        <p>Citrus, wild rocket condiment</p>
-    </div>
-    <div class="special-menu">
-        <h4>Viennese Veal Cullet</h4>
-        <p>Ricotta and spinach gnocchhi, Caccio de Pepe</p>
-    </div>
-</section>
-
-<!--------------RESTAURANT PHOTO GALLERY------------------->
-
-<section class="gallery">
-    <h2>Restaurants photo gallery</h2>
-    <p class="subtitle">Best foods for you & family</p>
-
-    <div class="gallery-photo">
-        <img src="./img/gallery/img1gallerybox.jpg"/>
-    </div>
-    <div class="gallery-photo">
-        <img src="./img/gallery/img2gallerybox.jpg"/>
-    </div>
-    <div class="gallery-photo">
-        <img src="./img/gallery/img3gallerybox.jpg"/>
-    </div>
-    <div class="gallery-photo">
-        <img src="./img/gallery/img4gallerybox.jpg"/>
-    </div>
-    <div class="gallery-photo">
-        <img src="./img/gallery/img5gallerybox.jpg"/>
-    </div>
-    <div class="gallery-photo">
-        <img src="./img/gallery/img6gallerybox.jpg"/>
-    </div>
-     <button>View more photos<img src="./img/Other/arrow.png" alt="arrow"/></button>
-</section>
-
-<!--------------MEET PROFESSIONAL CHEFS------------------->
-
-<section class="chef">
-<h2>Meet professional chefs</h2>
-<p class="subtitle">Bests foods for you & family</p>
-<img src="./img/team/img1team.jpg" alt="chef 1">
-<img src="./img/team/img2team.jpg" alt="chef 2">
-<img src="./img/team/img3team.jpg" alt="chef 3">
-<img src="./img/team/img4team.jpg" alt="chef 4">
-</section>
-
-<!--------------LASTEST NEWS & BLOG------------------->
-
-<section class="news">
-    <h2>Latest news & blog</h2>
-    <p class="subtitle">Best foods for you & family</p>
-
-    <div class="containers-news">
-        
-        <div class="news1">
-            <img src="./img/blog/img3blohhome01.jpg" alt="blohhome01">
-
-        </div>
-    </div>
-
-
-
-
 </section>
 
 
