meet professionnal chefs

--- a/kababi.html
+++ b/kababi.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="variables.css" /> 
-    <link rel="stylesheet" href="style.css" /> 
+    <!-- <link rel="stylesheet" href="variables.css" />  -->
+    <!-- <link rel="stylesheet" href="style.css" />  -->
     <link rel="stylesheet" href="bis-ver.css" />
+    <script
+      src="https://kit.fontawesome.com/0e39d36e41.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Kababi</title>
   </head>
 
@@ -187,7 +191,7 @@
 
         <aside>
           <img src="./img/gallery/imgfood1.png" class="imgfood1" alt="Plat 1" />
-          <img src="./img/gallery/imgfood2.jpg" class="imgfood2"  alt="Plat 2" />
+          <img src="./img/gallery/imgfood2.jpg" class="imgfood2" alt="Plat 2" />
           <img src="./img/gallery/imgfood3.png" class="imgfoot3" alt="Plat 3" />
         </aside>
       </div>
@@ -282,17 +286,18 @@
         </button>
       </section>
 
-<!--------------MEET PROFESSIONAL CHEFS------------------->
+      <!--------------MEET PROFESSIONAL CHEFS------------------->
 
-<section class="chef">
-<h2>Meet professional chefs</h2>
-<p class="subtitle">Bests foods for you & family</p>
-<img src="./img/team/img1team.jpg" alt="chef 1">
-<img src="./img/team/img2team.jpg" alt="chef 2">
-<img src="./img/team/img3team.jpg" alt="chef 3">
-<img src="./img/team/img4team.jpg" alt="chef 4">
-</section>
-
+      <section class="chef">
+        <h2>Meet professional chefs</h2>
+        <p class="subtitle">Bests foods for you & family</p>
+        <div class="images-chefs">
+          <img src="./img/team/img1team.jpg" alt="chef 1" />
+          <img src="./img/team/img2team.jpg" alt="chef 2" />
+          <img src="./img/team/img3team.jpg" alt="chef 3" />
+          <img src="./img/team/img4team.jpg" alt="chef 4" />
+        </div>
+      </section>
 
       <!--------------LASTEST NEWS & BLOG------------------->
 
@@ -358,40 +363,32 @@
       </nav>
       <div class="copyright">
         <div class="line-footer">
-          <div class="line"></div
-          ><img src="./img/footer/iconup@2x.png" alt="fork" class="fork" /><div
-            class="line"
-          ></div>
+          <div class="line"></div>
+          <img src="./img/footer/iconup@2x.png" alt="fork" class="fork" />
+          <div class="line"></div>
         </div>
-        <p class="copyright-p">
-          Copyright &copy; 2021 The Kababi - Restaurant HTML Template. Designed
-          by <a href="#">Themesflat</a>
-        </p>
-        <button>Discover more<img src="./img/Other/arrow.png" alt="arrow"/></button>
-    </div>
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
-
-        <div class="socials">
-          <img src="" alt="" /><img src="" alt="" /><img src="" alt="" /><img
-            src=""
-            alt=""
-          />
+        <div class="copyright-p">
+          <p>
+            Copyright &copy; 2021 The Kababi - Restaurant HTML Template.
+            Designed by <a href="#">Themesflat</a>
+          </p>
+          <div class="socials">
+            <!-- <div class="socials-icon"> -->
+            <i
+              class="fa-brands fa-facebook-f fa-sm active"
+              style="color: #ffffff"
+            ></i>
+            <!-- </div> -->
+            <!-- <div class="socials-icon"> -->
+            <i class="fa-brands fa-twitter fa-sm" style="color: #e0e0e0"></i>
+            <!-- </div> -->
+            <!-- <div class="socials-icon"> -->
+            <i class="fa-brands fa-youtube fa-sm" style="color: #e0e0e0"></i>
+            <!-- </div> -->
+            <!-- <div class="socials-icon"> -->
+            <i class="fa-brands fa-linkedin fa-sm" style="color: #e0e0e0"></i>
+            <!-- </div> -->
+          </div>
         </div>
       </div>
     </footer>
