--- a/kababi.html
+++ b/kababi.html
@@ -199,19 +199,22 @@
       <!--------------WHY CHOOSE US------------------->
 
       <section class="choose">
-        <h2>Why choose us</h2>
-        <p class="subtitle">Best foods for you & family</p>
-        <div class="choose">
+        <div>
+          <h2>Why choose us</h2>
+          <p class="subtitle">Best foods for you & family</p>
+        </div>
+        <div class="choose-us">
           <img src="./img/about-us/img_aboutus_home1.jpg" alt="aboutus" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo,
             unde aspernatur porro voluptates eum quia reiciendis fugiat vero
             dignissimos nihil vitae sed quae voluptatibus blanditiis nemo
             tempora tenetur veniam soluta numquam iure impedit eaque.
+            <button>
+              Discover more<img src="./img/Other/arrow.png" alt="arrow" />
+            </button>
           </p>
-          <button>
-            Discover more<img src="./img/Other/arrow.png" alt="arrow" />
-          </button>
+          
         </div>
       </section>
 
