--- a/kababi.html
+++ b/kababi.html
@@ -120,80 +120,84 @@
           <h2>Choose your best category</h2>
           <p class="subtitle">Best foods for you & family</p>
         </section>
+        <div class="category-item">
+          <section class="category">
+            <div class="cheeseburger">
+              <img
+                src="./img/icons/001-cheeseburger.png"
+                class="burger"
+                alt="Cheeseburger"
+              />
+              <h4>Cheeseburger</h4>
+              <img class="arrow-cat" src="./img/Other/arrow.png" alt="arrow" />
+            </div>
+          </section>
 
-        <section class="category">
-          <div class="cheeseburger">
-            <img
-              src="./img/icons/001-cheeseburger.png"
-              class="burger"
-              alt="Cheeseburger"
-            />
-            <h4>Cheeseburger</h4>
-            <img src="./img/Other/arrow.png" alt="arrow" />
-          </div>
-        </section>
+          <section class="category">
+            <div class="pizza">
+              <img
+                src="./img/icons/002-pizza.png"
+                class="pizza-slice"
+                alt="Pizza Slice"
+              />
+              <h4>Pizza Slice</h4>
+              <img class="arrow-cat" src="./img/Other/arrow.png" alt="arrow" />
+            </div>
+          </section>
 
-        <section class="category">
-          <div class="pizza">
-            <img
-              src="./img/icons/002-pizza.png"
-              class="pizza-slice"
-              alt="Pizza Slice"
-            />
-            <h4>Pizza Slice</h4>
-            <img src="./img/Other/arrow.png" alt="arrow" />
-          </div>
-        </section>
+          <section class="category">
+            <div class="coffee">
+              <img
+                src="./img/icons/003-coffee.png"
+                class="coffee-cup"
+                alt="Coffee Cup"
+              />
+              <h4>Coffee-Cup</h4>
+              <img class="arrow-cat" src="./img/Other/arrow.png" alt="arrow" />
+            </div>
+          </section>
 
-        <section class="category">
-          <div class="coffee">
-            <img
-              src="./img/icons/003-coffee.png"
-              class="coffee-cup"
-              alt="Coffee Cup"
-            />
-            <h4>Coffee-Cup</h4>
-            <img src="./img/Other/arrow.png" alt="arrow" />
-          </div>
-        </section>
+          <section class="category">
+            <div class="chicken">
+              <img
+                src="./img/icons/004-chicken-leg.png"
+                class="chicken-leg"
+                alt="Chicken Leg"
+              />
+              <h4>Chicken-Leg</h4>
+              <img class="arrow-cat" src="./img/Other/arrow.png" alt="arrow" />
+            </div>
+          </section>
 
-        <section class="category">
-          <div class="chicken">
-            <img
-              src="./img/icons/004-chicken-leg.png"
-              class="chicken-leg"
-              alt="Chicken Leg"
-            />
-            <h4>Chicken-Leg</h4>
-            <img src="./img/Other/arrow.png" alt="arrow" />
-          </div>
-        </section>
+          <section class="category">
+            <div class="energy">
+              <img
+                src="./img/icons/005-cocktail.png"
+                class="energy-drink"
+                alt="Energy Drink"
+              />
+              <h4>Energy Drink</h4>
+              <img class="arrow-cat" src="./img/Other/arrow.png" alt="arrow" />
+            </div>
+          </section>
 
-        <section class="category">
-          <div class="energy">
-            <img
-              src="./img/icons/005-cocktail.png"
-              class="energy-drink"
-              alt="Energy Drink"
-            />
-            <h4>Energy Drink</h4>
-            <img src="./img/Other/arrow.png" alt="arrow" />
-          </div>
-        </section>
-
-        <section class="category">
-          <div class="shrimp1">
-            <img src="./img/icons/006-marin.png" class="shrimp" alt="Shrimp" />
-            <h4>Shrimp</h4>
-            <img src="./img/Other/arrow.png" alt="arrow" />
-          </div>
-        </section>
-
-        <aside>
-          <img src="./img/gallery/imgfood1.png" class="imgfood1" alt="Plat 1" />
-          <img src="./img/gallery/imgfood2.jpg" class="imgfood2" alt="Plat 2" />
-          <img src="./img/gallery/imgfood3.png" class="imgfoot3" alt="Plat 3" />
-        </aside>
+          <section class="category">
+            <div class="shrimp1">
+              <img
+                src="./img/icons/006-marin.png"
+                class="shrimp"
+                alt="Shrimp"
+              />
+              <h4>Shrimp</h4>
+              <img class="arrow-cat" src="./img/Other/arrow.png" alt="arrow" />
+            </div>
+          </section>
+        </div>
+      </div>
+      <div class="img-food">
+        <img src="./img/gallery/imgfood1.png" class="imgfood1" alt="Plat 1" />
+        <img src="./img/gallery/imgfood2.jpg" class="imgfood2" alt="Plat 2" />
+        <img src="./img/gallery/imgfood3.png" class="imgfoot3" alt="Plat 3" />
       </div>
 
       <!--------------WHY CHOOSE US------------------->
@@ -214,7 +218,6 @@
               Discover more<img src="./img/Other/arrow.png" alt="arrow" />
             </button>
           </p>
-          
         </div>
       </section>
 
@@ -223,40 +226,70 @@
       <section class="special">
         <h2>Try our special offers</h2>
         <p class="subtitle">Best foods for you & family</p>
-        <img src="./img/our-menu/img2bg-our-menu.jpg" />
-        <img src="./img/our-menu/imgbg-our-menu.jpg" />
+        <img class="steak" src="./img/our-menu/img2bg-our-menu.jpg" />
+        <img class="bread" src="./img/our-menu/imgbg-our-menu.jpg" />
+        <div class="menu-flex">
+          <div class="left">
+            <div class="special-menu dashed">
+              <div class="description">
+                <h4>Raw scallops From Erquy</h4>
+                <p>Candied Jerusalem artichokes, truffle</p>
+              </div>
+              <p class="price">$89</p>
+            </div>
+            <div class="special-menu">
+              <div class="description">
+                <h4>Celeriac and Truffle Ravioli</h4>
+                <p>Roasted langoustine, consommé</p>
+              </div>
+              <p class="price">$89</p>
+            </div>
+            <div class="special-menu">
+              <div class="description">
+                <h4>Cod Filet Cooked on One Side</h4>
+                <p>Chorizo, chickpea espuma, pequillos</p>
+              </div>
+              <p class="price">$89</p>
+            </div>
+            <div class="special-menu">
+              <div class="description">
+                <h4>Sea Bass Ceviche</h4>
+                <p>Avocado, butternut, lime</p>
+              </div>
+              <p class="price">$89</p>
+            </div>
+          </div>
 
-        <div class="special-menu">
-          <h4>Raw scallops From Erquy</h4>
-          <p>Candied Jerusalem artichokes, truffle</p>
-        </div>
-        <div class="special-menu">
-          <h4>Celeriac and Truffle Ravioli</h4>
-          <p>Roasted langoustine, consommé</p>
-        </div>
-        <div class="special-menu">
-          <h4>Cod Filet Cooked on One Side</h4>
-          <p>Chorizo, chickpea espuma, pequillos</p>
-        </div>
-        <div class="special-menu">
-          <h4>Sea Bass Ceviche</h4>
-          <p>Avocado, butternut, lime</p>
-        </div>
-        <div class="special-menu">
-          <h4>Corrèze Pan-seared Veal Liver</h4>
-          <p>Olive oil mashed patato, onion jus</p>
-        </div>
-        <div class="special-menu">
-          <h4>Grilled Veal Filet Mignon</h4>
-          <p>Pumpkin, endives with hazelnuts</p>
-        </div>
-        <div class="special-menu">
-          <h4>Tender Octopus and Fennel</h4>
-          <p>Citrus, wild rocket condiment</p>
-        </div>
-        <div class="special-menu">
-          <h4>Viennese Veal Cullet</h4>
-          <p>Ricotta and spinach gnocchhi, Caccio de Pepe</p>
+          <div class="right">
+            <div class="special-menu">
+              <div class="description">
+                <h4>Corrèze Pan-seared Veal Liver</h4>
+                <p>Olive oil mashed patato, onion jus</p>
+              </div>
+              <p class="price">$89</p>
+            </div>
+            <div class="special-menu">
+              <div class="description">
+                <h4>Grilled Veal Filet Mignon</h4>
+                <p>Pumpkin, endives with hazelnuts</p>
+              </div>
+              <p class="price">$89</p>
+            </div>
+            <div class="special-menu">
+              <div class="description">
+                <h4>Tender Octopus and Fennel</h4>
+                <p>Citrus, wild rocket condiment</p>
+              </div>
+              <p class="price">$89</p>
+            </div>
+            <div class="special-menu">
+              <div class="description">
+                <h4>Viennese Veal Cullet</h4>
+                <p>Ricotta and spinach gnocchhi, Caccio de Pepe</p>
+              </div>
+              <p class="price">$89</p>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -265,24 +298,29 @@
       <section class="gallery">
         <h2>Restaurants photo gallery</h2>
         <p class="subtitle">Best foods for you & family</p>
-
-        <div class="gallery-photo">
-          <img src="./img/gallery/img1gallerybox.jpg" />
+        <div class="part1">
+          <div class="gallery-photo-1">
+            <!-- <img src="./img/gallery/img1gallerybox.jpg" /> -->
+            <h3>Family Package Dish</h3>
+            <p>Popular Food Package</p>
+          </div>
+          <div class="gallery-photo-2">
+            <!-- <img src="./img/gallery/img2gallerybox.jpg" /> -->
+          </div>
+          <div class="gallery-photo-3">
+            <!-- <img src="./img/gallery/img3gallerybox.jpg" /> -->
+          </div>
         </div>
-        <div class="gallery-photo">
-          <img src="./img/gallery/img2gallerybox.jpg" />
-        </div>
-        <div class="gallery-photo">
-          <img src="./img/gallery/img3gallerybox.jpg" />
-        </div>
-        <div class="gallery-photo">
-          <img src="./img/gallery/img4gallerybox.jpg" />
-        </div>
-        <div class="gallery-photo">
-          <img src="./img/gallery/img5gallerybox.jpg" />
-        </div>
-        <div class="gallery-photo">
-          <img src="./img/gallery/img6gallerybox.jpg" />
+        <div class="part2">
+          <div class="gallery-photo-4">
+            <!-- <img src="./img/gallery/img4gallerybox.jpg" /> -->
+          </div>
+          <div class="gallery-photo-5">
+            <!-- <img src="./img/gallery/img5gallerybox.jpg" /> -->
+          </div>
+          <div class="gallery-photo-6">
+            <!-- <img src="./img/gallery/img6gallerybox.jpg" /> -->
+          </div>
         </div>
         <button>
           View more photos<img src="./img/Other/arrow.png" alt="arrow" />
@@ -307,8 +345,76 @@
       <section class="news">
         <h2>Latest news & blog</h2>
         <p class="subtitle">Best foods for you & family</p>
+        <div class="card-container">
+          <div class="card">
+            <img src="./img/blog/img3blohhome01.jpg" alt="blog" />
+            <div class="metadata">
+              <img
+                class="img-meta"
+                src="./img/Other/author.png"
+                alt="author"
+              />BY WILLIAMSON
+              <img
+                class="img-meta"
+                src="./img/Other/calendar.png"
+                alt="calendar"
+              />25 AUG 2021
+            </div>
+            <h3>How To Run A UX Audit For Major EdTech Platform Case Study</h3>
+            <button>
+              Read more<img src="./img/Other/arrow.png" alt="arrow" />
+            </button>
+          </div>
+          <div class="card">
+            <img src="./img/blog/img1blohhome01.jpg" alt="blog" />
+            <div class="metadata">
+              <img
+                class="img-meta"
+                src="./img/Other/author.png"
+                alt="author"
+              />BY WILLIAMSON
+              <img
+                class="img-meta"
+                src="./img/Other/calendar.png"
+                alt="calendar"
+              />25 AUG 2021
+            </div>
+            <h3>How To Run A UX Audit For Major EdTech Platform Case Study</h3>
+            <button>
+              Read more<img src="./img/Other/arrow.png" alt="arrow" />
+            </button>
+          </div>
+          <div class="card">
+            <img src="./img/blog/img2blohhome01.jpg" alt="blog" />
+            <div class="metadata">
+              <img
+                class="img-meta"
+                src="./img/Other/author.png"
+                alt="author"
+              />BY WILLIAMSON
+              <img
+                class="img-meta"
+                src="./img/Other/calendar.png"
+                alt="calendar"
+              />25 AUG 2021
+            </div>
+            <h3>Designing With Code A Modern Approach To Development</h3>
+            <button class="btn-active">
+              Read more<img src="./img/Other/arrow.png" alt="arrow" />
+            </button>
+          </div>
+        </div>
+        <div class="brand">
+          <img src="./img/brand/imgbrand01.png" alt="brand" />
+          <img src="./img/brand/imgbrand02.png" alt="brand" />
+          <img src="./img/brand/imgbrand03.png" alt="brand" />
+          <img src="./img/brand/imgbrand04.png" alt="brand" />
+          <img src="./img/brand/imgbrand05.png" alt="brand" />
+          <img src="./img/brand/imgbrand06.png" alt="brand" />
+        </div>
       </section>
     </main>
+    <!-------------------FOOTER--------------------------->
     <footer>
       <img
         src="./img/logo/logo2@2x.png"
