--- a/kababi.html
+++ b/kababi.html
@@ -116,6 +116,7 @@
       <!--------------CHOOSE YOUR BEST CATEGORY------------------->
 
       <div class="categories">
+        <div class="background-text-category">CATEGORY</div>
         <section class="choose-category">
           <h2>Choose your best category</h2>
           <p class="subtitle">Best foods for you & family</p>
@@ -203,10 +204,12 @@
       <!--------------WHY CHOOSE US------------------->
 
       <section class="choose">
+        <div class="background-text-choose">ABOUT US</div>
         <div>
           <h2>Why choose us</h2>
           <p class="subtitle">Best foods for you & family</p>
         </div>
+        <img class="quality-about" src="./img/about-us/iconbgabout.png" alt="">
         <div class="choose-us">
           <img src="./img/about-us/img_aboutus_home1.jpg" alt="aboutus" />
           <p>
@@ -224,6 +227,8 @@
       <!--------------TRY OUR SPECIAL OFFER (MENU)------------------->
 
       <section class="special">
+        <div class="background-text-menu">OUR MENU</div>
+
         <h2>Try our special offers</h2>
         <p class="subtitle">Best foods for you & family</p>
         <img class="steak" src="./img/our-menu/img2bg-our-menu.jpg" />
@@ -296,6 +301,8 @@
       <!--------------RESTAURANT PHOTO GALLERY------------------->
 
       <section class="gallery">
+        <div class="background-text-gallery">GALLERY</div>
+
         <h2>Restaurants photo gallery</h2>
         <p class="subtitle">Best foods for you & family</p>
         <div class="part1">
@@ -330,6 +337,8 @@
       <!--------------MEET PROFESSIONAL CHEFS------------------->
 
       <section class="chef">
+        <div class="background-text-chefs">OUR CHEFS</div>
+
         <h2>Meet professional chefs</h2>
         <p class="subtitle">Bests foods for you & family</p>
         <div class="images-chefs">
@@ -343,6 +352,8 @@
       <!--------------LASTEST NEWS & BLOG------------------->
 
       <section class="news">
+        <div class="background-text-blog">OUR BLOG</div>
+
         <h2>Latest news & blog</h2>
         <p class="subtitle">Best foods for you & family</p>
         <div class="card-container">
